chore(endpoint/edge): small refactor and move endpoint status handler [EE-2710] (#1305)
